# job-haunt-fastapi-backend

./: pyproject.toml
app/: database.py  main.py  settings.py
app/core/: __init__.py  exceptions.py  logger_config.py
app/repositories/: activity_log_repository.py  admin_repository.py  job_application_automation.py  job_application_repository.py  job_preference.py  job_skills.py  job_status_repository.py  learning_plan_repository.py  learning_resource_repository.py  learning_status_repository.py  notification_preference_repository.py  resource_note.py  resource_todo.py  user_email_settings_repository.py  user_repository.py  user_skills.py
app/routes/: __init__.py  activity_log.py  admin.py  job_application_routes.py  job_preference.py  job_skills.py  job_statuses.py  kanban_board.py  learning_plans.py  learning_resource.py  learning_statuses.py  notification_preference.py  resource_note.py  resource_todo.py  user_email_settings.py  user_routes.py  user_skills.py
app/schemas/: activity_log_schema.py  admin_schema.py  common.py  email_log.py  job_application.py  job_application_automation.py  job_preference.py  job_skill.py  job_status.py  kanban_board.py  learning_plan.py  learning_plans.py  learning_resource.py  learning_status.py  notification_preference.py  resource_notes.py  resource_todo.py  user.py  user_mail_settings.py  user_skills.py
app/services/: activity_log_service.py  admin_service.py  cloudinary.py  common.py  job_application_service.py  job_preference.py  job_skills_service.py  job_statuses.py  kanban_board.py  learning_plan.py  learning_resource.py  (+7 more)
(+4 files in other folders)
